Fix header being off-center

--- a/public/styles.css
+++ b/public/styles.css
@@ -15,8 +15,13 @@ pre {
   white-space: pre-wrap
 }
 
+form {
+  width: 347px;
+  height: 94px;
+}
+
 .grid-header-container {
-  margin: 15px 0px 3px 12px;
+  margin: 15px 0 3px 0;
   display: grid;
   grid-template-columns: 1% 98% 1%;
   justify-items: center;
@@ -25,7 +30,6 @@ pre {
 
 .grid-header {
   grid-column-start: 2;
-  margin-bottom: 10px;
 }
 
 .btn-group button {
@@ -63,7 +67,7 @@ pre {
   border: 1px solid #919191;
   border-bottom: 2px solid #00000057;
   border-radius: 3px;
-  text-indent: 55px;
+  text-indent: 53px;
   font-family: 'IBM Plex Sans', sans-serif, Verdana, Arial, Helvetica, sans-serif;
   font-weight: 400;
   background: #f7f7f7;
@@ -81,7 +85,8 @@ pre {
   color: #c35d6e;
   cursor: pointer;
   position: relative;
-  left: -30px;
+  left: 321px;
+  bottom: 25px;
   background-color: #f7f7f7;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
   -webkit-tap-highlight-color: transparent;
@@ -97,9 +102,10 @@ pre {
 
 .fa { /* font awesome */
   position: relative;
-  right: 333px;
+  right: -15px;
+  bottom: 25px;
   color: #919191;
-  -webkit-animation: image_blur_searchbar 3s; 
+  -webkit-animation: image_blur_searchbar 3s;
   background-color: #f7f7f7;
 }
 
